--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "claire-portfolio",
   "version": "0.1.0",
+  "homepage": "https://claireyau5.github.io",
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^2.0.19",
